# drafty

./: .env.example  .gitignore  README.md  README_SETUP.md  base.yml  example-config.json  pyproject.toml  requirements.txt  test_drafty.py  test_workflow.py
drafty/: __init__.py
drafty/cli/: __init__.py  main.py
drafty/cli/commands/: __init__.py  draft.py  edit.py  export.py  generate.py  link.py  new.py  nlp.py  outline.py  research.py
drafty/core/: __init__.py  config.py  exceptions.py  settings.py  workspace.py
drafty/providers/: __init__.py  base.py  gemini.py  openai.py
drafty/services/: __init__.py  citations.py  crawler.py  draft.py  edit.py  embeddings.py  export.py  linker.py  outline.py  research.py  templates.py
drafty/templates/outputs/: html.j2  markdown.j2
drafty/templates/prompts/: draft_section.j2  edit.j2  outline.j2  research.j2
drafty/utils/: __init__.py  http.py  scraper.py
